Finalizando o header e footer

--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/c34f3ce8ac.js" crossorigin="anonymous"></script>
+    <title>Lessons Learned</title>
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">
-            O título
+            Juliana Oliveira
         </h1>
+        <h3 id="subtitulo">Lessons Learned</h3>
+        <img id="minha_foto" src="./src/Foto__Juliana.jpeg" alt="Minha foto">
+        <nav id="navbar">
+            <ul>
+                <li>
+                    <a class="link"  href="./link1.html" target="_blank" >Conteúdo</a>
+                </li>
+                <li>
+                    <a class="link" href="./link2.html" target="_blank">Exercícios</a>
+                </li>
+                <li>
+                    <a class="link" href="./link2.html" target="_blank">Projetos</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li>
-                <a href="./link1.html" target="_blank" >link 1</a>
-            </li>
-            <li>
-                <a href="./link2.html" target="_blank">link 2</a>
-            </li>
-        </ul>
-    </nav>
-    <section>
-        <img id="minha_foto" src="" alt="Minha foto">
-    </section>
+ 
+  
     <section>
         <ol id="licoes_aprendidas">Lições aprendidas
             <li>Unix/Linux</li>
@@ -61,7 +66,31 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, similique! Eveniet qui praesentium fugiat minima tenetur in pariatur, accusantium commodi voluptatibus eligendi modi animi distinctio maiores magnam porro! Maiores, quidem.</p>
     </aside>
     <footer id="rodape">
-
+        <section class="icons">
+            <ul>
+                <li>
+                    <a href="mailto:jsfoliveira89@gmail.com" target="_blank">
+                        <i class="far fa-envelope fa-2x fa-inverse" href="https://mail.google.com/mail/u/0/" target='_blank'></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/juliana-oliveira-61326b205/" target="_blank">
+                        <i class="fab fa-linkedin-in fa-2x fa-inverse "></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.github.com/jsfoliveira" target="_blank">
+                        <i class="fab fa-github fa-2x fa-inverse"></i>
+                        
+                    </a>
+                </li>
+                
+            </ul>
+        </section>
+        <section class="rodape-texto">
+            <div class="linha"></div>
+            <p class="texto-rodape">&copy;JulianaOliveira</p>
+        </section>
     </footer>
 </body>
 </html>
