--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">
             Juliana Oliveira
         </h1>
-        <h3 id="subtitulo">Lessons Learned</h3>
+        <h2 id="subtitulo">Lessons Learned</h2>
         <img id="minha_foto" src="./src/Foto__Juliana.jpeg" alt="Minha foto">
         <nav id="navbar">
             <ul>
@@ -39,8 +39,7 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>Como funciona a internet/li>
-            <li>Protocolos da internet</li>
-            
+            <li>Protocolos da internet</li> 
         </ol>
         <ul id="licoes_a_aprender">Lições a aprender
             <li>JavaScript</li>
@@ -55,9 +54,6 @@
             <li>Mongo</li>
         </ul>
         <table id="tabela">
-            <tr>
-                <th id="titulo_tabela" colspan=2>Meu cronograma diário</th>
-            </tr>
             <tr>
                 <th>Horário</th>
                 <th>Atividade</th>
@@ -113,11 +109,11 @@
         </table>
     </section>
     <section id="segunda-parte">
-        <article>
+        <article class="lado-direito">
             <p>Estudar desenvolvimento web na Trybe está sendo muito proveitoso pra mim, porque eu aprendo coisas novas, conheço novas pessoas, pratico o que aprendi com bastante exercício, consigo ter uma rotina de estudo muito boa, além de todo o suporte que tenho caso apareça alguma dúvida ou dificuldade. Estou confiante de que, daqui a 12 meses, serei uma nova pessoa e profissional.</p>
         </article>
-        <aside>
-            <p>Eu já tinha um pouco de conhecimento sobre HTML e CSS. Estudá-los novamente serviu como uma revisão, mas também aprendi detalhes que o outro curso que fiz não me proporcionou. Quantos os outros assuntos, foi tudo muito novo e carregarei todo esse conhecimento para minha vida profissional.</p>
+        <aside class="lado-esquerdo">
+            <p>Eu já tinha um pouco de conhecimento sobre HTML e CSS. Estudá-los novamente serviu como uma revisão, mas também aprendi detalhes que o outro curso que fiz não me proporcionou. </p>
         </aside>
     </section>
     <footer id="rodape">
