--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">
             Juliana Oliveira
         </h1>
-        <h2 id="subtitulo">Lessons Learned</h2>
+        <h2 id="subtitulo">Estudante da Trybe</h2>
         <img id="minha_foto" src="./src/Foto__Juliana.jpeg" alt="Minha foto">
         <nav id="navbar">
             <ul>
