mudei algumas informaçoes da tabela

--- a/index.html
+++ b/index.html
@@ -59,52 +59,36 @@
                 <th>Atividade</th>
             </tr>
             <tr>
-                <td>07:30 até 08:00</td>
-                <td>Café da manhã</td>
-            </tr>
-            <tr>
-                <td>08:00 até 08:30</td>
-                <td>Arrumo meu filho para escola</td>
-            </tr>
-            <tr>
                 <td>08:30 até 10:30</td>
                 <td>Estudo</td>
             </tr>
             <tr>
-                <td>10:30 até 11:30</td>
-                <td>Dou o banho e almoço do meu filho</td>
-            </tr>
-            <tr>
-                <td>11:30 até 12:00</td>
-                <td>Brinco com o meu filho</td>
-            </tr>
-            <tr>
-                <td>12:20 até 12:40</td>
-                <td>Boto o meu filho para dormir</td>
-            </tr>
-            <tr>
-                <td>12:40 até 13:00</td>
-                <td>Almoço</td>
-            </tr>
-            <tr>
                 <td>13:00 até 14:00</td>
-                <td>Estudo</td>
+                <td>Monitoria</td>
             </tr>
             <tr>
-                <td>14:00 até 20:00</td>
-                <td>Aula</td>
+                <td>14:00 até 14:45</td>
+                <td>Aula Inicial</td>
             </tr>
             <tr>
-                <td>20:00 até 20:30</td>
-                <td>Coloco o meu filho para dormir</td>
+                <td>14:45 até 16:20</td>
+                <td>Conteúdo do course</td>
             </tr>
             <tr>
-                <td>20:30 até 21:00</td>
-                <td>Janto</td>
+                <td>16:20 até 18:00</td>
+                <td>Aula ao vivo</td>
             </tr>
             <tr>
-                <td>21:00 até 22:30</td>
-                <td>Estudo e depois durmo</td>
+                <td>18:00 até 18:40</td>
+                <td>Exercícios</td>
+            </tr>
+            <tr>
+                <td>18:40 até 19:20</td>
+                <td>Mentoria</td>
+            </tr>
+            <tr>
+                <td>19:30 até 20:00</td>
+                <td>Aula de fechamento</td>
             </tr>
         </table>
     </section>
